--- a/frond-end-ecomerce/package.json
+++ b/frond-end-ecomerce/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sweetalert2/theme-bootstrap-4": "^5.0.16",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
@@ -17,6 +18,7 @@
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
+    "sweetalert2": "^11.12.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
