--- a/frond-end-ecomerce/package.json
+++ b/frond-end-ecomerce/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.16.0",
+    "@mui/material": "^5.16.0",
     "@sweetalert2/theme-bootstrap-4": "^5.0.16",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
